--- a/public/css/main.css
+++ b/public/css/main.css
@@ -679,7 +679,7 @@ a {
 .hero-banner__content h1 {
     font-family: "Roboto", sans-serif;
     font-size: 25px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 700;
     margin-bottom: 10px;
 }
