--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,33 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,500,600");
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500");
+/* rating */
+.rating-css {
+    color: #ffe400;
+    font-size: 10px;
+    font-family: sans-serif;
+    font-weight: 800;
+    /* text-align: center; */
+    text-transform: uppercase;
+    padding: 20px 0;
+}
+.rating-css input {
+    display: none;
+}
+.rating-css input + label {
+    font-size: 20px;
+    text-shadow: 1px 1px 0 #8f8420;
+    cursor: pointer;
+}
+.rating-css input:checked + label ~ label {
+    color: #b4afaf;
+}
+.rating-css label:active {
+    transform: scale(0.8);
+    transition: 0.3s ease;
+}
+
+/* End of Star Rating */
+
 body {
     color: #777;
     font-family: "Roboto", sans-serif;
